[project]
name = "security-tools-pro-mcp"
version = "1.0.0"
description = "Unified security MCP server — CVE, CWE, EPSS, KEV, GHSA, OSV, exploit search, cross-reference, and risk prioritization"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.23.0,<2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
security-tools-pro = "server:mcp.run"