[project]
name = "security-tools-pro-mcp"
version = "1.0.0"
description = "Unified security MCP server — CVE, CWE, EPSS, KEV, GHSA, OSV, exploit search, cross-reference, and risk prioritization"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.23.0,<2.0.0",
    "python-dotenv>=1.0.0",
    "starlette>=1.3.1",
    "cryptography>=48.0.1",
    "python-multipart>=0.0.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3,<10.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:mcp.*",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that require external services",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
security-tools-pro = "server:mcp.run"

[tool.coverage.run]
source = ["core", "modules"]
omit = [
    "tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
    "docs/*",
    ".opencode/*",
    "*/__init__.py",
]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.coverage.xml]
output = "coverage.xml"